added the finish source code for popular page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
     "editor.fontSize": 14,
     "editor.rulers": [80, 120],
     "editor.lineHeight": 21, 
-    "git.enabled": true,
+    "git.enabled": true
 }
