--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "create": "webpack",
-    "dev": "webpack-dev-server --open", 
+    "dev": "webpack-dev-server --open",
     "build": "NODE_ENV='production' webpack -p",
     "firebase-init": "firebase login && firebase init",
     "deploy": "npm run build && firebase deploy"
@@ -34,6 +34,7 @@
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.2",
+    "firebase-tools": "^3.9.1",
     "html-webpack-plugin": "^2.28.0",
     "style-loader": "^0.18.1",
     "webpack": "^2.6.0",
